# ubpkg

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
repo/: act.ubpkg.sky  aws-nuke.ubpkg.sky  bitwarden-cli.ubpkg.sky  caddy.ubpkg.sky  clickhouse.ubpkg.sky  cloud-provider-kind.ubpkg.sky  djot-log.ubpkg.sky  edit.ubpkg.sky  editorconfig-checker.ubpkg.sky  eksctl.ubpkg.sky  emacs-nox.ubpkg.sky  fnm.ubpkg.sky  fx.ubpkg.sky  gh.ubpkg.sky  gurk.ubpkg.sky  helm.ubpkg.sky  htmlq.ubpkg.sky  iamb.ubpkg.sky  iamlive.ubpkg.sky  incus.ubpkg.sky  jj.ubpkg.sky  just.ubpkg.sky  k9s.ubpkg.sky  kind.ubpkg.sky  kubectl.ubpkg.sky  lazygit.ubpkg.sky  mdbook-mermaid.ubpkg.sky  mdbook.ubpkg.sky  minikube.ubpkg.sky  mitmproxy.ubpkg.sky  mutagen.ubpkg.sky  nextcloud-desktop.ubpkg.sky  nix-portable.ubpkg.sky  nix-user-chroot.ubpkg.sky  otel-cli.ubpkg.sky  pandoc.ubpkg.sky  pnpm.ubpkg.sky  prek.ubpkg.sky  probe-rs-tools.ubpkg.sky  rdap.ubpkg.sky  (+20 more)
src/: base.rs  git.rs  github.rs  lib.rs  main.rs  repo.rs  rest.rs  runner.rs
ubpkg/: cli.py  github.py  manifests.py
ubpkg/repo/: talosctl.ubpkg.yaml
