[package]
name = "ubpkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocative = "0.3.4"
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
color-eyre = "0.6.3"
decompress = { version = "0.6.0", default-features = false, features = ["targz", "zip", "gz", "tarxz"] }
directories = "6.0.0"
include_dir = "0.7.4"
regex = "1.11.1"
starlark = "0.13.0"
tempfile = "3.19.1"
thiserror = "2.0.12"
ureq = "3.0.9"
vsort = "0.2.0"
