[package]
name = "ubpkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocative = "0.3.4"
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
color-eyre = "0.6.5"
decompress = { version = "0.6.0", default-features = false, features = ["targz", "zip", "gz", "tarxz", "tarzst"] }
directories = "6.0.0"
include_dir = "0.7.4"
regex = "1.11.2"
starlark = "0.13.0"
tempfile = "3.21.0"
thiserror = "2.0.16"
ureq = "3.1.0"
vsort = "0.2.0"
